Bug 682571 - nsLocalFile::isWritable behaves wrongly on Windows. r=bsmedberg